# OpenEnv-hackathon

./: .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
env/: __init__.py  environment.py  graders.py  models.py  tasks.py
server/: app.py
